data/derived/sp14/progs/unify/prog3026.ml.out
Characters 1-10:
  !(1. = 1.);;
   ^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a ref
